# VoltEnv

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  DESIGN.md  README.md  TECHNICAL_DOCS.md  opencode.json  package.json  skills-lock.json
examples/manifests/: nginx.json
src-frontend/: auto-imports.d.ts  eslint.config.mjs  nuxt.config.ts  package.json  vitest.config.ts
src-frontend/app/: app.config.ts  app.vue
src-frontend/app/assets/css/: main.css
src-frontend/app/components/: LogConsole.vue  ServiceCard.vue  ServiceCatalog.vue  ServiceTable.vue  VhostList.vue
src-frontend/app/composables/: useDashboard.ts  useServiceApi.ts
src-frontend/app/composables/__tests__/: useServiceApi.test.ts
src-frontend/app/layouts/: blank.vue  default.vue
src-frontend/app/pages/: custom-service.vue  index.vue  logs.vue  onboarding.vue  quick-create.vue  settings.vue
src-frontend/app/pages/services/: [id].vue
src-frontend/app/stores/: logManager.ts  services.ts
src-frontend/app/stores/__tests__/: logManager.test.ts  services.spec.ts  services.test.ts
src-frontend/shared/types/: events.ts  quick-create.ts  service.ts  settings.ts  vhost.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/embedded/services/: mysql.json  nginx.json  php.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: get-services-status.json  start-service.json  stop-service.json
src-tauri/src/: errors.rs  lib.rs  main.rs  paths.rs  utils.rs
src-tauri/src/commands/: database.rs  misc.rs  mod.rs  quick_create.rs  service.rs  vhost.rs
src-tauri/src/config/: mod.rs
src-tauri/src/config/templates/: my.cnf.tpl  nginx.conf.tpl  php.ini.tpl
src-tauri/src/download/: manager.rs  mod.rs  verifier.rs
src-tauri/src/installer/: manager.rs
src-tauri/src/logging/: mod.rs  system.rs
src-tauri/src/modules/: backup.rs  commands.rs  env.rs  fs_watcher.rs  mod.rs  paths.rs  services.rs
src-tauri/src/modules/catalog/: manager.rs  mod.rs  models.rs
src-tauri/src/modules/download/: manager.rs  mod.rs  orchestrator.rs  verifier.rs
src-tauri/src/modules/installer/: manager.rs  mod.rs
src-tauri/src/modules/logger/: mod.rs
src-tauri/src/modules/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/modules/services/: mod.rs
src-tauri/src/process/: mod.rs
src-tauri/src/process/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/service/: mod.rs  php_ini.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/vhost/: hosts.rs  mod.rs  ssl.rs
src-tauri/src/watcher/: mod.rs
