[package]
name = "voltenv"
version = "0.0.1"
description = "Lightweight local development environment manager"
authors = ["VoltEnv Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
zip = "2"
futures-util = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["now"] }
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
junction = "1.2.0"
notify = "7"

# --- TAURI v2 PLUGIN ECOSYSTEM ---
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
