[package]
name = "voltenv"
version = "0.1.0"
description = "Lightweight local development environment manager"
authors = ["VoltEnv Team"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["now"] }
notify = "7"
archive = "0.3"
tera = "1"
uuid = { version = "1", features = ["v4"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = "0.23"

log = "0.4"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
glib = "0.22.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
junction = "1.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
